<resources>
    <string name="app_name">Soligma</string>
    <string name="tittle">Soligma Editor</string>
    <string name="username">username or email</string>
    <string name="pw">password</string>
    <string name="button">Login</string>
    <string name="buttonsave">Save changes</string>
    <string name="reg">Register now</string>
    <string name="name">name</string>
    <string name="user">username</string>
    <string name="email">e-mail</string>
    <string name="camgallery">Photo Bucket</string>
    <string name="cam">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="filter1">B/W</string>
    <string name="filter2">Transparent</string>
    <string name="filter3">Pink</string>
    <string name="filter4">Blue</string>
    <string name="cancel">cancel</string>
    <string name="Blue">Blue</string>
    <string name="crop">­­Crop</string>
    <string name="rotate">Rotate</string>
    <string name="admintittle">Permissions</string>
</resources>
